place picker to be implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetailsForm" />
-        <activity android:name=".StoreItemForm"></activity>
+        <activity android:name=".StoreItemForm" />
+        <activity android:name=".LocationActivity"></activity>
     </application>
 
 </manifest>
