--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".SelectItemFromInventory" />
+        <activity android:name=".SelectItemFromInventory"
+            android:windowSoftInputMode="stateHidden"/>
         <activity android:name=".enterNumberOfStock"></activity>
     </application>
 
